# project-ENE

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILLS.md  alembic.ini  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: check-requirements.md  implement-task.md  memory-pattern.md  obsidian-sync.md  test-feature.md
.claude/docs/: requirements.md  tasks.md
.claude/docs/design/: 00_overview.md  01_workflow.md  02_agents.md  02_agents_detail.md  03_memory_system.md  04_data_models.md  04_data_models_supporting.md  05_llm_adapter.md  06_patterns.md  (+7 more)
.claude/rules/: code-style.md  git-convention.md
.claude/scripts/: run_tests_on_save.sh
.kiro/hooks/: auto-format-python.kiro.hook  test-after-task.kiro.hook
.kiro/steering/: ai-character-chat-system.md
app/: __init__.py  main.py
config/: __init__.py  database.py  database_config.py  env_config.py
controllers/: __init__.py  health_controller.py  person_controller.py  user_controller.py  websocket_controller.py
docker/: docker-compose.dev.yml
exceptions/: __init__.py
middleware/: __init__.py  auth_middleware.py  cors_middleware.py  error_middleware.py  logging_middleware.py
models/: __init__.py  base.py  episode.py  last_reflected_id.py  message.py  person.py  reflection.py  tag.py  tag_message.py  tag_reflection.py  user.py
prompts/: __init__.py  episode_create_prompt.txt  prompt_loader.py  system_prompt.txt  tag_create_prompt.txt
prompts/episode/: episode_create_prompt.txt
prompts/summary/: summary_system_prompt.txt  summary_user_prompt_template.txt
prompts/tag/: tag_create_prompt.txt  tag_create_user_prompt_template.txt
repositories/: __init__.py  base.py  last_reflected_id_repository.py  message_repository.py  person_repository.py  reflection_repository.py  tag_message_repository.py  tag_reflection_repository.py  tag_repository.py
routes/: __init__.py
schemas/: __init__.py  health.py  message.py  person.py  reflection.py  user.py
services/: __init__.py  health_service.py  last_reflected_id_service.py  llm_service.py  message_service.py  person_service.py  reflection_service.py  tag_service.py  user_service.py  websocket_service.py
services/workers/: __init__.py  reflection_worker.py
src/core/: config.py
src/database/: connection.py  models.py
utils/: __init__.py  json_utils.py  transactional.py
utils/logs/: __init__.py  ascii_art.py  formatter.py  logger.py
(+26 files in other folders)
