[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-character-chat"
version = "0.1.0"
description = "AI Character Chat System - Memory-based agent with long-term relationship formation"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",

    # LangGraph / LangChain
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.9",

    # Configuration
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Utilities
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "poethepoet>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.poe.tasks]
# Docker
dev-up    = "docker compose -f docker/docker-compose.dev.yml up -d"
dev-down  = "docker compose -f docker/docker-compose.dev.yml down"
dev-clean = "docker compose -f docker/docker-compose.dev.yml down -v"

# DB
rollback  = "python -m alembic downgrade -1"

# App
dev       = "uvicorn src.api.main:app --reload --host 0.0.0.0 --port 8000"

# Quality
test      = "pytest"
lint      = "ruff check src tests"
typecheck = "mypy src"

[tool.poe.tasks.migrate]
sequence = [
  {cmd = "docker compose -f docker/docker-compose.dev.yml up -d"},
  {cmd = "docker compose -f docker/docker-compose.dev.yml wait db"},
  {cmd = "python -m alembic upgrade head"},
]
